--- a/index.html
+++ b/index.html
@@ -3,53 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Guest Dashboard v1.6</title>
+<title>Beach House Guest Dashboard v2.0</title>
 <style>
 body { font-family: Arial,sans-serif; margin:0; padding:0; background:linear-gradient(135deg,#00c6ff,#0072ff); color:#fff;}
 .container { max-width:900px; margin:0 auto; padding:20px; }
-h1{text-align:center; margin-bottom:10px;}
-#welcomeScreen,#dashboard{display:none;}
-button{padding:15px 30px;margin:10px;font-size:1.2rem;border:none;border-radius:10px;cursor:pointer; transition:.2s;}
-button:hover{opacity:.8;}
-.yes{background-color:#00ff6a;color:#000;}
-.no{background-color:#ff4d4d;color:#000;}
-.checkin{background-color:#fff;color:#0072ff;}
-.signout{background-color:#ffcc00;color:#000;}
-.calendar{display:flex;justify-content:center;flex-wrap:wrap;margin:20px 0;}
-.day{width:60px;height:60px;margin:5px;display:flex;justify-content:center;align-items:center;border-radius:10px;background-color:rgba(255,255,255,0.2);}
-.today{border:3px solid #fff;font-weight:bold;}
-.checked-in{background-color:#00ff6a;color:#000;}
-.work-request{display:flex;flex-direction:column;margin-top:20px;}
-input,textarea{padding:10px;margin:5px 0;border-radius:10px;border:none;font-size:1rem;}
+h1{text-align:center; margin-bottom:20px;}
+.dashboard { display:flex; flex-direction:column; align-items:center; }
+.calendar { display:flex; justify-content:center; flex-wrap:wrap; margin:20px 0; max-width:600px; }
+.day { width:60px; height:60px; margin:5px; display:flex; justify-content:center; align-items:center; border-radius:10px; background-color:rgba(255,255,255,0.2); font-weight:bold; }
+.today { border:3px solid #fff; }
+.checked-in { background-color:#00ff6a; color:#000; }
+.work-request { display:flex; flex-direction:column; margin-top:20px; width:100%; max-width:600px; }
+input,textarea,button { padding:10px; margin:5px 0; border-radius:10px; border:none; font-size:1rem; }
+button { cursor:pointer; transition:0.2s; }
+.submit-btn { background-color:#fff;color:#0072ff; font-weight:bold; }
+.submit-btn:hover { opacity:0.8; }
+.feedback { margin-top:10px; font-weight:bold; }
 </style>
 </head>
 <body>
 <div class="container">
-<h1>Beach House Guest Dashboard v1.6</h1>
-
-<!-- Welcome Screen -->
-<div id="welcomeScreen">
+<h1>Welcome to the Beach House</h1>
+<div class="dashboard">
   <h2 id="welcomeMessage"></h2>
-  <p>Are you here?</p>
-  <button class="yes" id="yesBtn">Yes</button>
-  <button class="no" id="noBtn">No</button>
-</div>
-
-<!-- Dashboard -->
-<div id="dashboard">
-  <div>
-    <button class="checkin" id="checkinBtn">Check In ✅</button>
-    <button class="signout" id="signoutBtn">Sign Out</button>
-  </div>
-
-  <!-- Calendar -->
   <div class="calendar" id="calendar"></div>
-
-  <!-- Work Request Form -->
+  
   <div class="work-request">
     <h3>Submit a Work Request</h3>
     <textarea id="requestText" placeholder="Describe the issue..." rows="3"></textarea>
-    <button class="checkin" id="submitRequestBtn">Submit Request</button>
+    <button class="submit-btn" id="submitRequestBtn">Submit Request</button>
+    <span class="feedback" id="feedback"></span>
   </div>
 </div>
 </div>
@@ -57,27 +40,22 @@ input,textarea{padding:10px;margin:5px 0;border-radius:10px;border:none;font-siz
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-// Supabase credentials (replace with your project keys)
+// --- Supabase config ---
 const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// Elements
-const welcomeScreen = document.getElementById('welcomeScreen');
-const dashboard = document.getElementById('dashboard');
+// --- Elements ---
 const welcomeMessage = document.getElementById('welcomeMessage');
-const yesBtn = document.getElementById('yesBtn');
-const noBtn = document.getElementById('noBtn');
-const checkinBtn = document.getElementById('checkinBtn');
-const signoutBtn = document.getElementById('signoutBtn');
 const calendarEl = document.getElementById('calendar');
 const requestText = document.getElementById('requestText');
 const submitRequestBtn = document.getElementById('submitRequestBtn');
+const feedback = document.getElementById('feedback');
 
 let currentGuest = null;
-let today = new Date().toISOString().slice(0,10);
+const today = new Date().toISOString().slice(0,10); // YYYY-MM-DD
 
-// Load today's scheduled guest
+// --- Load today's guest ---
 async function loadGuest(){
   const { data, error } = await supabase
     .from('guests')
@@ -88,30 +66,21 @@ async function loadGuest(){
     .limit(1)
     .single();
 
-  if(error || !data){ alert('No scheduled guest for today.'); return; }
+  if(error || !data){ welcomeMessage.textContent='No scheduled guest for today.'; return; }
   currentGuest = data;
 
-  const isFirstDay = !currentGuest.checked_in_dates.includes(today);
-  if(isFirstDay){
-    welcomeMessage.textContent = `Welcome, ${currentGuest.guest_last_name}s!`;
-    welcomeScreen.style.display = 'block';
-  } else showDashboard();
+  welcomeMessage.textContent = `Welcome, ${currentGuest.guest_last_name}s!`;
+
+  // Automatically check in if first day
+  if(!currentGuest.checked_in_dates.includes(today)){
+    await markCheckedIn();
+  }
+
   renderCalendar();
+  scheduleMidnightSignOut();
 }
 
-function showDashboard(){
-  welcomeScreen.style.display = 'none';
-  dashboard.style.display = 'block';
-  checkinBtn.disabled = currentGuest.checked_in_dates.includes(today);
-}
-
-yesBtn.addEventListener('click', async ()=>{
-  await markCheckedIn();
-  showDashboard();
-});
-
-noBtn.addEventListener('click', ()=>{ alert('Please contact admin.'); });
-
+// --- Mark check-in ---
 async function markCheckedIn(){
   let updatedDates = currentGuest.checked_in_dates || [];
   if(!updatedDates.includes(today)) updatedDates.push(today);
@@ -121,35 +90,11 @@ async function markCheckedIn(){
     .update({ checked_in_dates: updatedDates })
     .eq('id', currentGuest.id);
 
-  if(error) alert('Error checking in.');
-  else {
-    currentGuest.checked_in_dates = updatedDates;
-    renderCalendar();
-    alert('Checked in successfully!');
-  }
+  if(error) return console.error('Error checking in:', error);
+  currentGuest.checked_in_dates = updatedDates;
 }
 
-checkinBtn.addEventListener('click', markCheckedIn);
-
-signoutBtn.addEventListener('click', ()=>{
-  alert('Signed out. Have a great day!');
-  dashboard.style.display='none';
-  welcomeScreen.style.display='block';
-});
-
-submitRequestBtn.addEventListener('click', async ()=>{
-  const text = requestText.value.trim();
-  if(!text) return alert('Enter a request.');
-
-  const { error } = await supabase.from('work_requests').insert([{
-    guest_id: currentGuest.id,
-    request_text: text
-  }]);
-
-  if(error) alert('Error submitting request.');
-  else { alert('Request submitted!'); requestText.value=''; }
-});
-
+// --- Render calendar ---
 function renderCalendar(){
   calendarEl.innerHTML='';
   const start = new Date(currentGuest.start_date);
@@ -161,23 +106,37 @@ function renderCalendar(){
     div.className='day';
     if(dayStr===today) div.classList.add('today');
     if(currentGuest.checked_in_dates.includes(dayStr)) div.classList.add('checked-in');
-    div.textContent=d.getDate();
+    div.textContent = d.getDate();
     calendarEl.appendChild(div);
   }
 }
 
+// --- Submit work request ---
+submitRequestBtn.addEventListener('click', async ()=>{
+  const text = requestText.value.trim();
+  if(!text){ feedback.textContent='Enter a request.'; return; }
+
+  const { error } = await supabase.from('work_requests').insert([{
+    guest_id: currentGuest.id,
+    request_text: text
+  }]);
+
+  if(error){ feedback.textContent='Error submitting request.'; console.error(error); }
+  else { feedback.textContent='Request submitted!'; requestText.value=''; }
+});
+
+// --- Automatic midnight sign-out ---
 function scheduleMidnightSignOut(){
   const now = new Date();
   const msUntilMidnight = new Date(now.getFullYear(),now.getMonth(),now.getDate()+1)-now;
   setTimeout(()=>{
-    signoutBtn.click();
+    feedback.textContent = 'You have been signed out for the day.';
     scheduleMidnightSignOut();
   }, msUntilMidnight);
 }
 
-// Init
+// --- Init ---
 loadGuest();
-scheduleMidnightSignOut();
 </script>
 </body>
 </html>
