--- a/admin.html
+++ b/admin.html
@@ -3,213 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Admin Dashboard v1.0</title>
+<title>Beach House Admin Dashboard v1.1</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #0072ff, #00c6ff);
-    color: #fff;
-    margin: 0;
-    padding: 0;
-  }
-  .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  h1 { text-align: center; margin-bottom: 20px; }
-  input, button, select {
-    padding: 10px;
-    margin: 5px;
-    border-radius: 10px;
-    border: none;
-    font-size: 1rem;
-  }
-  button { cursor: pointer; transition: 0.2s; }
-  button:hover { opacity: 0.8; }
-  .add-guest { background-color: #00ff6a; color: #000; }
-  .update { background-color: #ffcc00; color: #000; }
-  .delete { background-color: #ff4d4d; color: #000; }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background-color: rgba(255,255,255,0.2);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  th, td {
-    padding: 10px;
-    text-align: left;
-  }
-  th { background-color: rgba(0,0,0,0.4); }
-  td { background-color: rgba(255,255,255,0.1); }
+body { font-family: Arial,sans-serif; margin:0; padding:0; background:linear-gradient(135deg,#0072ff,#00c6ff); color:#fff; }
+.container { max-width:1000px; margin:0 auto; padding:20px; }
+h1 { text-align:center; margin-bottom:20px; }
+section { background:rgba(0,0,0,0.2); padding:15px; border-radius:10px; margin-bottom:20px; }
+input,textarea,button,select { width:100%; padding:10px; margin:5px 0; border-radius:10px; border:none; font-size:1rem; }
+button { cursor:pointer; transition:0.2s; font-weight:bold; }
+.add-btn { background-color:#00ff6a; color:#000; }
+.add-btn:hover { opacity:0.8; }
+.cancel-btn { background-color:#ff4d4d; color:#000; }
+.cancel-btn:hover { opacity:0.8; }
+.feedback { font-weight:bold; margin-top:5px; }
+table { width:100%; border-collapse:collapse; margin-top:10px; }
+th,td { padding:10px; text-align:left; border-bottom:1px solid rgba(255,255,255,0.3); }
 </style>
 </head>
 <body>
 <div class="container">
-  <h1>Beach House Admin Dashboard v1.0</h1>
+<h1>Beach House Admin Dashboard v1.1</h1>
 
-  <h2>Add / Update Family</h2>
-  <input type="text" id="lastName" placeholder="Family Last Name">
+<section id="scheduleGuestSection">
+  <h2>Schedule a Guest</h2>
+  <input type="text" id="guestLastName" placeholder="Guest Last Name">
   <input type="date" id="startDate">
   <input type="date" id="endDate">
-  <button class="add-guest" id="addBtn">Add Family</button>
+  <button class="add-btn" id="addGuestBtn">Add Guest</button>
+  <span class="feedback" id="scheduleFeedback"></span>
+</section>
 
-  <h2>Scheduled Families</h2>
-  <table id="guestsTable">
+<section id="guestListSection">
+  <h2>Current Guests</h2>
+  <table id="guestTable">
     <thead>
-      <tr>
-        <th>Family Last Name</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Checked In Dates</th>
-        <th>Active</th>
-        <th>Actions</th>
-      </tr>
+      <tr><th>Last Name</th><th>Start</th><th>End</th><th>Checked-In Days</th><th>Actions</th></tr>
     </thead>
     <tbody></tbody>
   </table>
+</section>
 
+<section id="workRequestsSection">
   <h2>Work Requests</h2>
-  <table id="requestsTable">
+  <table id="requestTable">
     <thead>
-      <tr>
-        <th>Family</th>
-        <th>Request</th>
-        <th>Status</th>
-        <th>Date</th>
-      </tr>
+      <tr><th>Guest</th><th>Request</th><th>Status</th><th>Date</th></tr>
     </thead>
     <tbody></tbody>
   </table>
-
-</div>
+</section>
 
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-// Supabase credentials
+// --- Supabase config ---
 const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// Elements
-const lastNameInput = document.getElementById('lastName');
-const startDateInput = document.getElementById('startDate');
-const endDateInput = document.getElementById('endDate');
-const addBtn = document.getElementById('addBtn');
-const guestsTable = document.getElementById('guestsTable').querySelector('tbody');
-const requestsTable = document.getElementById('requestsTable').querySelector('tbody');
+// --- Elements ---
+const guestLastName = document.getElementById('guestLastName');
+const startDate = document.getElementById('startDate');
+const endDate = document.getElementById('endDate');
+const addGuestBtn = document.getElementById('addGuestBtn');
+const scheduleFeedback = document.getElementById('scheduleFeedback');
 
-// Load all scheduled families
-async function loadGuests() {
-  const { data, error } = await supabase
-    .from('guests')
-    .select('*')
-    .order('start_date', { ascending: true });
+const guestTableBody = document.querySelector('#guestTable tbody');
+const requestTableBody = document.querySelector('#requestTable tbody');
 
-  if(error) return console.error(error);
+// --- Add Guest ---
+addGuestBtn.addEventListener('click', async ()=>{
+  const lastName = guestLastName.value.trim();
+  const start = startDate.value;
+  const end = endDate.value;
 
-  guestsTable.innerHTML = '';
-  data.forEach(guest => {
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${guest.guest_last_name}</td>
-      <td>${guest.start_date}</td>
-      <td>${guest.end_date}</td>
-      <td>${guest.checked_in_dates.join(', ')}</td>
-      <td>${guest.active ? 'Yes' : 'No'}</td>
-      <td>
-        <button class="update" data-id="${guest.id}">Update</button>
-        <button class="delete" data-id="${guest.id}">Cancel</button>
-      </td>
-    `;
-    guestsTable.appendChild(tr);
-  });
-
-  // Attach update/cancel handlers
-  document.querySelectorAll('.update').forEach(btn => {
-    btn.addEventListener('click', () => updateGuest(btn.dataset.id));
-  });
-  document.querySelectorAll('.delete').forEach(btn => {
-    btn.addEventListener('click', () => cancelGuest(btn.dataset.id));
-  });
-}
-
-// Load work requests
-async function loadRequests() {
-  const { data, error } = await supabase
-    .from('work_requests')
-    .select('*, guests(guest_last_name)')
-    .order('date', { ascending: true });
-
-  if(error) return console.error(error);
-
-  requestsTable.innerHTML = '';
-  data.forEach(req => {
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${req.guests.guest_last_name}</td>
-      <td>${req.request_text}</td>
-      <td>${req.status}</td>
-      <td>${new Date(req.date).toLocaleString()}</td>
-    `;
-    requestsTable.appendChild(tr);
-  });
-}
-
-// Add family
-addBtn.addEventListener('click', async () => {
-  const lastName = lastNameInput.value.trim();
-  const start = startDateInput.value;
-  const end = endDateInput.value;
-  if(!lastName || !start || !end) return alert('Fill all fields');
+  if(!lastName || !start || !end){ scheduleFeedback.textContent='All fields required.'; return; }
 
   const { error } = await supabase.from('guests').insert([{
     guest_last_name: lastName,
     start_date: start,
-    end_date: end,
-    active: true,
-    checked_in_dates: []
+    end_date: end
   }]);
 
-  if(error) return alert('Error adding family');
-
-  lastNameInput.value = '';
-  startDateInput.value = '';
-  endDateInput.value = '';
-  loadGuests();
+  if(error){ scheduleFeedback.textContent='Error adding guest.'; console.error(error); }
+  else { 
+    scheduleFeedback.textContent='Guest added!';
+    guestLastName.value=''; startDate.value=''; endDate.value='';
+    loadGuests();
+  }
 });
 
-// Update guest (change dates)
-async function updateGuest(id) {
-  const newStart = prompt('Enter new start date (YYYY-MM-DD):');
-  const newEnd = prompt('Enter new end date (YYYY-MM-DD):');
-  if(!newStart || !newEnd) return;
+// --- Load Guests ---
+async function loadGuests(){
+  const { data, error } = await supabase.from('guests').select('*').order('start_date', { ascending:true });
+  if(error) return console.error(error);
+  guestTableBody.innerHTML='';
+  data.forEach(g=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML=`
+      <td>${g.guest_last_name}</td>
+      <td>${g.start_date}</td>
+      <td>${g.end_date}</td>
+      <td>${(g.checked_in_dates||[]).join(', ')}</td>
+      <td>
+        <button class="cancel-btn" data-id="${g.id}">Cancel</button>
+      </td>
+    `;
+    guestTableBody.appendChild(tr);
+  });
 
-  const { error } = await supabase
-    .from('guests')
-    .update({ start_date: newStart, end_date: newEnd })
-    .eq('id', id);
-
-  if(error) return alert('Error updating family');
-  loadGuests();
+  // Attach cancel buttons
+  document.querySelectorAll('.cancel-btn').forEach(btn=>{
+    btn.addEventListener('click', async ()=>{
+      const id = btn.dataset.id;
+      const { error } = await supabase.from('guests').update({active:false}).eq('id',id);
+      if(error) console.error(error);
+      loadGuests();
+    });
+  });
 }
 
-// Cancel guest (mark inactive)
-async function cancelGuest(id) {
-  if(!confirm('Cancel this stay?')) return;
-  const { error } = await supabase
-    .from('guests')
-    .update({ active: false })
-    .eq('id', id);
-
-  if(error) return alert('Error cancelling family');
-  loadGuests();
+// --- Load Work Requests ---
+async function loadRequests(){
+  const { data, error } = await supabase.from('work_requests').select('*,guest_id(guest_last_name)').order('date',{ascending:true});
+  if(error) return console.error(error);
+  requestTableBody.innerHTML='';
+  data.forEach(r=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML=`
+      <td>${r.guest_id?.guest_last_name || 'Unknown'}</td>
+      <td>${r.request_text}</td>
+      <td>${r.status}</td>
+      <td>${new Date(r.date).toLocaleString()}</td>
+    `;
+    requestTableBody.appendChild(tr);
+  });
 }
 
-// Initial load
+// --- Init ---
 loadGuests();
 loadRequests();
 </script>
